--- a/main.html
+++ b/main.html
@@ -25,6 +25,7 @@
 
   <div id="graph_container">
 
+    <div id="stack"></div>
     <div id="solitons"></div>
     <div id="instruct">Click two coordinates to initialize solitons and restart simulation.</div>
   
