Minor text edits.

--- a/main.html
+++ b/main.html
@@ -6,9 +6,9 @@
 
   <div id="left_col">
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
-commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
-et magnis dis parturient montes, nascetur ridiculus mus.
+    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+    commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+    penatibus et magnis dis parturient montes, nascetur ridiculus mus.
 
     <blockquote style="color:green;">
       Donec quam felis, ultricies nec, pellentesque eu, pretium quis,
@@ -91,7 +91,7 @@ et magnis dis parturient montes, nascetur ridiculus mus.
   </div>
 
   <div id="right_col">
-
+    
     <div id="graph_container">
 
       <div id="instruct1">Click two coordinates to initialize solitons
