--- a/main.html
+++ b/main.html
@@ -102,40 +102,17 @@
 	<div id="solitons-y-label">$u$</div>
       </div>
 
-      <div id="parameters" data-file="parameters.coffee">
-	<div id="instruct2">Press ctrl+enter after editing.</div>
-      </div>
+	<div id="parameters" data-file="main.coffee"
+	     data-start-match="N\:"
+	     data-end-match="\#\.">
+	  <div id="instruct2">Press ctrl+enter after editing.</div>
+	</div>
 
       <div id="stack">
 	<div id="stack-x-label">$x$</div>
       </div>
 
     </div>
-
-  </div>
-
-  <div id="clear"></div>
-  
-  <div style="margin-bottom: 0px;">
-
-    <h3> References </h3>
-
-    Phasellus consectetuer vestibulum elit. Aenean tellus metus,
-    bibendum sed, posuere ac, mattis non, nunc. Phasellus consectetuer
-    vestibulum elit. Aenean tellus metus, bibendum sed, posuere ac,
-    mattis non, nunc.
-
-    Vestibulum fringilla pede sit amet augue. In turpis. Pellentesque
-    posuere. Phasellus consectetuer vestibulum elit. Aenean tellus
-    metus, bibendum sed, posuere ac, mattis non, nunc.
-
-    Praesent turpis. Aenean posuere, tortor sed cursus feugiat, nunc
-    augue blandit nunc, eu sollicitudin urna dolor sagittis lacus.
-
-    Donec elit libero, sodales nec, volutpat a, suscipit non,
-    turpis. Nullam sagittis. Suspendisse pulvinar, augue ac venenatis
-    condimentum, sem libero volutpat nibh, nec pellentesque velit pede
-    quis nunc.
 
   </div>
 
