--- a/main.html
+++ b/main.html
@@ -104,8 +104,8 @@
 
 	<div id="parameters" data-file="main.coffee"
 	     data-start-match="N\:"
-	     data-end-match="\#\.">
-	  <div id="instruct2">Press ctrl+enter after editing.</div>
+	     data-end-match="dispersion\:">
+	  <div id="instruct2">Press shift+enter after editing.</div>
 	</div>
 
       <div id="stack">
